# TimeTracker

./: .gitignore  .lint  README.md  app.js  appveyor.yml  bower.json  build.ps1  build.sh  data.sqlite  database.sqlite  gui.js  hub.js  index.html  init.html  jiratest.js  package-lock.json  package.json  sqltest.js  version.js
.circleci/: config.yml
client/: .env  .env-dev  .env-prod  app.js  index.html  package-lock.json  package.json
client/modules/: Storage.js  fork.js  messageManager.js  scheduler.js  settingsManager.js  sqlStorage.js
client/public/: app.js
install/: TimeTracker.desktop  install.js
models/: day.js  note.js  noteCategory.js
models/mongo/: task.js
models/sqlite/: day.js  note.js
modules/: cache.js  fork.js  jira.js  messageManager.js  mongoStorage.js  scheduler.js  settingsManager.js  sqlStorage.js  storageManager.js
public/: app.js
public/controllers/: categories.js  category.js  day.js  home.js  main.js  (+7 more)
server/: hub.js  package-lock.json  package.json
server_native/: Cargo.toml  Rocket.toml
server_native/src/: main.rs  sql.rs
server_native/src/helpers/: mod.rs
server_native/src/models/: category.rs  day.rs  mod.rs  note.rs  task.rs
server_native/src/routes/: get_categories.rs  get_category.rs  get_day.rs  get_days.rs  get_note.rs  get_notes.rs  mod.rs  remove_category.rs  remove_day.rs  remove_note.rs  remove_task.rs  save_category.rs  save_day.rs  save_note.rs
server_native/src/types/: body.rs  data.rs  day_body.rs  mod.rs  note_body.rs  single_value_body.rs
sql_reports/: getHoursByMonth.sql
storage/: index.js
(+54 files in other folders)
