[package]
name = "server_native"
version = "1.1.0"
authors = ["jpfeiffer16 <joepfeiffer16@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.9"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.11.0"
features = ["bundled"]

[dependencies.rocket_contrib]
default-features = true
features = ["json"]